syntax = "proto3";

package project;
service ProjectService {
  rpc GetProject(ProjectRequest) returns (ProjectResponse);
}

message ProjectRequest {
  string project_id = 1;
}

message ProjectResponse {
  string project_id = 1;
  string projectCode = 2;
  string investor = 3;
  string createdBy = 4;
}
